fix alignement text badge

--- a/Sass/Components/_button.scss
+++ b/Sass/Components/_button.scss
@@ -72,7 +72,7 @@
   top: 13px;
   right: 12px;
   z-index: 1;
-  @include font(#008766, "Roboto", 14px, normal, 500, normal);
+  @include font(#008766, "Roboto", 14px, normal, 500, normal, center);
 }
 
 .btnlike {
